--- a/android/app/src/main/res/layout/activity_my.xml
+++ b/android/app/src/main/res/layout/activity_my.xml
@@ -60,6 +60,17 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:layout_marginTop="8dp"
+        android:background="#ffffff"
+        android:editable="false"
+        android:textColor="#010101"
+        android:layout_gravity="right" />
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -100,6 +111,15 @@
             android:textColor="#010101" />
 
         <TextView android:id="@+id/registeration_token"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:layout_marginTop="8dp"
+            android:background="#ffffff"
+            android:editable="false"
+            android:textColor="#010101" />
+
+        <TextView android:id="@+id/downstream_bundle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
