iOS - Send upstream messages
Bug: 23498242
Change-Id: Ief85b805f8eebae53c17e92031a176526405804b

--- a/ios/GCM Playground/Base.lproj/Main.storyboard
+++ b/ios/GCM Playground/Base.lproj/Main.storyboard
@@ -255,6 +255,7 @@
                                         </variation>
                                         <connections>
                                             <action selector="registerClient:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ZMt-bX-8a8"/>
+                                            <action selector="sendUpstreamMessage:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="MyR-O8-DuR"/>
                                         </connections>
                                     </button>
                                 </subviews>
