Android - Use server response for registration state
This change updates the Android client so it uses the
client registration state instead of assuming that the
server will always work.

Change-Id: Idf7d7e1fce026afddcf3f6f17072636556426bf1

--- a/android/app/src/main/res/layout/activity_my.xml
+++ b/android/app/src/main/res/layout/activity_my.xml
@@ -51,18 +51,23 @@
         android:weightSum="1" >
 
         <Button android:id="@+id/register_button"
-            android:layout_weight="0.5"
+            android:layout_weight="0.4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/button_register"
             android:layout_marginTop="2dp" />
         <Button android:id="@+id/unregister_button"
-            android:layout_weight="0.5"
+            android:layout_weight="0.4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/button_unregister"
             android:layout_marginTop="2dp"
             android:enabled="false" />
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progress_bar"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
