Make it easier to delete the giant placeholder text
Also replace a few vars with lets

--- a/ios/GCM Playground/Base.lproj/Main.storyboard
+++ b/ios/GCM Playground/Base.lproj/Main.storyboard
@@ -101,6 +101,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <connections>
+                                    <action selector="identifierDidBeginEditing:" destination="vXZ-lx-hvc" eventType="editingDidBegin" id="B5F-oO-Zb5"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="String Identifier" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Gg-JQ-9h2">
                                 <rect key="frame" x="20" y="30" width="100" height="17"/>
